Search by name and surename added